# sequencer

./: .gitignore  Cargo.toml  README.md  config.toml  flake.nix  init.sh  shell.nix
docker/sequencer/: Dockerfile
docker/sequencer/amd64/: build.sh  docker-compose.yml
docker/sequencer/arm64/: build.sh  docker-compose.yml  qemu.sh
docker/synth/: Dockerfile  build.sh  docker-compose.yml
src/: common.rs  entrypoint.sh  gui.rs  input.rs  lib.rs  main.rs  markov_notes.rs  midi.rs  note.rs  playback.rs  state.rs  structs.rs
src/midi/: gui.rs  mod.rs  state.rs
src/mixer/: mod.rs  state.rs
src/sequencers/: common.rs  euclidean.rs  markov.rs  mod.rs  traits.rs
src/sequencers/euclidean/: config.rs  euclidean_sequencer.rs  gui.rs  input.rs  mod.rs  state.rs
src/sequencers/markov/: config.rs  input.rs  markov_sequencer.rs  mod.rs
src/sequencers/mixer/: config.rs  gui.rs  input.rs  mod.rs  sequence_mixer.rs  state.rs
