[package]
name = "generative-sequencer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
markov = "1.1.0"
midir = "0.10.0"
tokio = { version = "1.36.0", features = ["full", "sync", "time"] }