[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
ctrlc = "3.1.0"
device_query = "2.1.0"
env_logger = "0.11.3"
iced = { version = "0.13.1", features = ["advanced", "canvas", "tokio"] }
iced_futures = "0.13.2"
log = "0.4.22"
markov = "1.1.0"
midir = "0.10.0"
num = "0.4.3"
rand = "0.9.1"
rustc-hash = "2.1.1"
throttle = "0.1.0"
tokio = { version = "1.36.0", features = ["full", "sync", "time"] }
